--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.1.12",
     "@strapi/strapi": "4.1.12",
     "mysql": "2.18.1",
+    "strapi-plugin-entity-relationship-chart": "^4.1.0",
     "strapi-plugin-menus": "^0.3.2"
   },
   "author": {
