--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@strapi/icons": "^1.1.1",
+    "@strapi/plugin-graphql": "^4.1.12",
     "@strapi/plugin-i18n": "4.1.12",
     "@strapi/plugin-users-permissions": "4.1.12",
     "@strapi/strapi": "4.1.12",
     "mysql": "2.18.1",
-    "strapi-plugin-entity-relationship-chart": "^4.1.0",
-    "strapi-plugin-menus": "^0.3.2"
+    "strapi-plugin-entity-relationship-chart": "^4.1.0"
   },
   "author": {
     "name": "A Strapi developer"
